[gd_scene load_steps=14 format=2]

[ext_resource path="res://Imagens/fundo_fase.jpeg" type="Texture" id=1]
[ext_resource path="res://Imagens/seta.png" type="Texture" id=2]
[ext_resource path="res://Cenas/scripts/fase.gd" type="Script" id=3]
[ext_resource path="res://Imagens/moeda.png" type="Texture" id=4]
[ext_resource path="res://Imagens/sortear.png" type="Texture" id=5]
[ext_resource path="res://Imagens/cara.png" type="Texture" id=6]
[ext_resource path="res://Imagens/coroa.png" type="Texture" id=7]
[ext_resource path="res://Imagens/frase1.png" type="Texture" id=8]
[ext_resource path="res://Imagens/lado_resultado.png" type="Texture" id=9]
[ext_resource path="res://AtomicNumber.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Imagens/frase2.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 10 )

[node name="Fase" type="Node2D"]
script = ExtResource( 3 )

[node name="FundoFase" type="Sprite" parent="."]
position = Vector2( 649.5, 348.75 )
scale = Vector2( 2.08466, 1.68465 )
texture = ExtResource( 1 )

[node name="Botao_seta" type="TextureButton" parent="."]
margin_left = 44.0
margin_top = 41.0
margin_right = 139.0
margin_bottom = 141.0

[node name="Seta" type="Sprite" parent="Botao_seta"]
position = Vector2( 41, 47 )
scale = Vector2( 0.107458, 0.120833 )
texture = ExtResource( 2 )

[node name="Botao_cara" type="TextureButton" parent="."]
margin_left = 118.0
margin_top = 277.0
margin_right = 294.0
margin_bottom = 442.0

[node name="Moeda1" type="Sprite" parent="Botao_cara"]
position = Vector2( 91, 83 )
scale = Vector2( 0.159635, 0.152315 )
texture = ExtResource( 4 )

[node name="cara" type="Sprite" parent="Botao_cara"]
position = Vector2( 84, 82 )
scale = Vector2( 0.07377, 0.0619029 )
texture = ExtResource( 6 )

[node name="Botao_coroa" type="TextureButton" parent="."]
margin_left = 401.0
margin_top = 274.0
margin_right = 586.0
margin_bottom = 441.0

[node name="Moeda2" type="Sprite" parent="Botao_coroa"]
position = Vector2( 95.875, 83.125 )
scale = Vector2( 0.15638, 0.14838 )
texture = ExtResource( 4 )

[node name="coroa" type="Sprite" parent="Botao_coroa"]
position = Vector2( 91.5, 84 )
scale = Vector2( 0.0703125, 0.0740741 )
texture = ExtResource( 7 )

[node name="Sortear" type="TextureButton" parent="."]
margin_left = 165.0
margin_top = 472.0
margin_right = 582.0
margin_bottom = 599.0

[node name="Botao_sorteio" type="Sprite" parent="Sortear"]
position = Vector2( 188, 112 )
scale = Vector2( 0.227344, 0.203704 )
texture = ExtResource( 5 )

[node name="Frase1" type="Sprite" parent="."]
position = Vector2( 171, 115 )
scale = Vector2( 0.325, 0.297222 )
texture = ExtResource( 8 )
offset = Vector2( 595, 271 )

[node name="LadoResultado" type="Sprite" parent="."]
position = Vector2( 987, 353 )
scale = Vector2( 0.392188, 0.391667 )
texture = ExtResource( 9 )

[node name="Resultado" type="Label" parent="."]
modulate = Color( 1, 0.992157, 0.992157, 1 )
margin_left = 809.0
margin_top = 577.0
margin_right = 1154.0
margin_bottom = 662.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="Cara" type="Sprite" parent="."]
position = Vector2( 968, 357.25 )
scale = Vector2( 0.225521, 0.195833 )
texture = ExtResource( 6 )

[node name="Coroa" type="Sprite" parent="."]
position = Vector2( 975, 357 )
scale = Vector2( 0.257292, 0.234259 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 131.0
margin_top = 447.0
margin_right = 279.0
margin_bottom = 479.0
text = "CARA"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 421.0
margin_top = 441.0
margin_right = 569.0
margin_bottom = 473.0
text = "COROA"
align = 1
valign = 1

[node name="Frase2" type="Sprite" parent="."]
position = Vector2( 631, 87 )
scale = Vector2( 0.136458, 0.117593 )
texture = ExtResource( 11 )

[node name="pontuacao" type="Label" parent="."]
margin_left = 1092.0
margin_top = 46.0
margin_right = 1226.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[connection signal="pressed" from="Botao_seta" to="." method="_on_Botao_seta_pressed"]
[connection signal="pressed" from="Botao_cara" to="." method="_on_Botao_cara_pressed"]
[connection signal="pressed" from="Botao_coroa" to="." method="_on_Botao_coroa_pressed"]
[connection signal="pressed" from="Sortear" to="." method="_on_Sortear_pressed"]
